--- a/HoangTranIdealJob.html
+++ b/HoangTranIdealJob.html
@@ -11,25 +11,106 @@
     <!-- navigation menu -->
     <nav class="navbar">
         <div class="nav_container">
-            <a href="" id="team_name">IT Hub</a>
+            <a href="https://ithubhub.com" id="team_name">IT Hub</a>
             <ul class="nav_menu">
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="home-page">Home</a>
+                    <a href="https://ithubhub.com" class="nav_links" id="home-page">Home</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#team" class="nav_links" id="personal_info">Team</a>
+                    <a href="https://ithubhub.com/#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="IT_Tech.html" class="nav_links"  id="it_tech">IT Tech</a>
+                    <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#project" class="nav_links" id="project">Project</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#Personalities" class="nav_links" id="personalities">Personalities</a>
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/it-tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/ai">AI </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/cloud-computing">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/crypto">Cryptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/robots">Robots</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav_items">
-                    <a href="Ideal-Job.html" class="nav_links" id="Ideal-Job">Ideal Job</a>
+                    <a href="https://ithubhub.com/project" class="nav_links" id="project">Project</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/personalities" class="nav_links">Personalities</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/minh">Minh </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Ideal Jobs</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Feedback</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
                 </li>
             </ul>
         </div>
@@ -57,6 +138,7 @@
     </p>
     <br>
     <h1>Future Plan For Myself</h1>
+    <br>
     <p>
         I am now enrolled in an online C++ class. I don't have a specific strategy for this work yet since I've been focusing my attention on classes at RMIT. But I feel that working in a team here will allow me to develop experience, and I have already completed the MOS certification, which I do not believe will be utilized here. <br>In conclusion, I believe that this is quite sketchy because I am a complete beginner to this field, but I will definitely pick up some required skills in the future when I have already made up my mind that I want to work for this company, and right now this job is just suiting my passion at the moment, and I am unsure if that will continue in the future.
 
@@ -64,7 +146,8 @@
 
     <br>
     <h1>Comparison</h1>
-    <p>
+    <br>
+    <p style="padding-bottom:150px;">
       The commonality between our dream jobs, I suppose, is that everyone is enthused about their profession and eager to work hard for it. The second thing I noticed was that all of our members chose jobs in IT, whereas Quang is working his way up to become a risk manager. Because our employment needed a solid grasp of programming languages, everyone of us will have to have a good understanding of the languages. For example, Minh desires to be a software developer, Thang expects to be a backend developer, and my aim is being a game developer, therefore we must study and use programming languages like C# and Java professionally. Quang's employment, on the other hand, just requires him to be conversant with Micro Office tools such as Excel and PowerPoint. In my opinion, after seeing my teammates' career plans, I observed that they have a clear career path that they will have to follow in the next three years in order to obtain the job, especially Quang, who is in his final year and has already planned to have five years of experience eventually for this ideal job. One thing I've seen is that I'm still uncertain about my career or whether it'll even be appropriate for me after three years because the employment market changes over time. The sole reason I chose to become a game developer is that it is exciting and provides a lot of wealth. This happened because now in 2020 and 2021, because of the epidemic, people are unable to go outdoors and must stay at home, resulting in a large amount of free time for youngsters. Because teens had an abundance of free time, streaming platforms such as Twitch and YouTube saw an increase in viewership, so content creators and game developers profited greatly from the epidemic. However, in the next three years, individuals may not have as much free time as they had previously, and independent games may only attract a tiny number of consumers, making it unprofitable to become a game developer. Still, if I have the qualifications, working for large corporations like Riot or Garena may keep my interest alive. My teammates' positions, on the other hand, are irreplaceable, and there will always be a labor shortage. 
 
 
