--- a/IT_Tech.html
+++ b/IT_Tech.html
@@ -11,19 +11,106 @@
     <!-- navigation menu -->
     <nav class="navbar">
         <div class="nav_container">
-            <a href="index.html" id="team_name">IT Hub</a>
+            <a href="https://ithubhub.com" id="team_name">IT Hub</a>
             <ul class="nav_menu">
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="home-page">Home</a>
+                    <a href="https://ithubhub.com" class="nav_links" id="home-page">Home</a>
                 </li>
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="personal_info">Team</a>
+                    <a href="https://ithubhub.com/#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="IT_Tech.html" class="nav_links"  id="it_tech">IT Tech</a>
+                    <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#project" class="nav_links" id="project">Project</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/it-tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/ai">AI </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/cloud-computing">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/crypto">Cryptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/robots">Robots</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav_items">
+                    <a href="https://ithubhub.com/project" class="nav_links" id="project">Project</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/personalities" class="nav_links">Personalities</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/minh">Minh </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Ideal Jobs</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Feedback</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
                 </li>
             </ul>
         </div>
@@ -66,7 +153,7 @@
             </div>
         </div>
     </div>
-    <!-- <script src="IT_Tech_Script.js"></script> -->
+    <script src="IT_Tech_Script.js"></script>
 
 </body>
 </html>
