--- a/MinhNguyenIdealJob.html
+++ b/MinhNguyenIdealJob.html
@@ -11,25 +11,106 @@
     <!-- navigation menu -->
     <nav class="navbar">
         <div class="nav_container">
-            <a href="" id="team_name">IT Hub</a>
+            <a href="https://ithubhub.com" id="team_name">IT Hub</a>
             <ul class="nav_menu">
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="home-page">Home</a>
+                    <a href="https://ithubhub.com" class="nav_links" id="home-page">Home</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#team" class="nav_links" id="personal_info">Team</a>
+                    <a href="https://ithubhub.com/#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="IT_Tech.html" class="nav_links"  id="it_tech">IT Tech</a>
+                    <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#project" class="nav_links" id="project">Project</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#Personalities" class="nav_links" id="personalities">Personalities</a>
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/it-tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/ai">AI </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/cloud-computing">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/crypto">Cryptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/robots">Robots</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav_items">
-                    <a href="Ideal-Job.html" class="nav_links" id="Ideal-Job">Ideal Job</a>
+                    <a href="https://ithubhub.com/project" class="nav_links" id="project">Project</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/personalities" class="nav_links">Personalities</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/minh">Minh </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Ideal Jobs</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Feedback</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
                 </li>
             </ul>
         </div>
@@ -57,6 +138,7 @@
     </p>
     <br>
     <h1>Future Plan For Myself</h1>
+    <br>
     <p>
         I would prefer RMIT teaching all of the listed programs and programming languages. But if they are not available in RMIT curriculums, I am always willing to learn them through other methods such as YouTube tutorials, online tutor classes. For example, I can learn C# through a free YouTube course by freeCodeCamp. Or a MySQL YouTube course by Programming by Mosh.
 
@@ -64,7 +146,8 @@
 
     <br>
     <h1>Comparison</h1>
-    <p>
+    <br>
+    <p style="padding-bottom:150px;">
         The majority of the ideal jobs of our team members require knowledge in IT and programming. With the exception of Le Nhat Quang, whose ideal job is to be a risk manager for Manulife. This is understandable as his major is in International Business, not IT. While the rest of us all aspire to have jobs in the IT field, each of our jobs differ from one another. For example, my ideal job would be a software developer at City Ascom. While Hoang would like to become a game developer. Or Thang, who would like to become a back-end engineer for Shopee. When it comes to the plans to reach these ideal jobs, everybody seems to wish to use their time working in teams as RMIT to hone their abilities of operating in a group to aid them in their work in the future. Various members such as Hoang, Quang or myself plan on attending online courses or tutorials as a mode of learning new skills, whereas Thang seems to have a clear-cut plan for which courses he would take during his time at RMIT. Most of us are still rather unsure about the specifics about how we would attain the required knowledge to reach our ideal jobs, most methods are still limited to RMIT courses or online courses. But Quang, with this year being his last year at RMIT and being the eldest, he seems to have a much clearer and realistic plan compared to ours. No matter the differences we have among each other, I think we know that we all have passion for what we wish to do and are trying our hardest to reach them. 
 
     </p>
