--- a/Personality-Minh-Nguyen-Opinions.html
+++ b/Personality-Minh-Nguyen-Opinions.html
@@ -5,33 +5,117 @@
     <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="personaility.css">
+    <link rel="stylesheet" href="Personality-style.css">
 </head>
 <body>
     <!-- navigation menu -->
     <nav class="navbar">
         <div class="nav_container">
-            <a href="" id="team_name">IT Hub</a>
+            <a href="https://ithubhub.com" id="team_name">IT Hub</a>
             <ul class="nav_menu">
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="home-page">Home</a>
+                    <a href="https://ithubhub.com" class="nav_links" id="home-page">Home</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#team" class="nav_links" id="personal_info">Team</a>
+                    <a href="https://ithubhub.com/#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="IT_Tech.html" class="nav_links"  id="it_tech">IT Tech</a>
+                    <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#project" class="nav_links" id="project">Project</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#Personalities" class="nav_links" id="personalities">Personalities</a>
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/it-tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/ai">AI </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/cloud-computing">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/crypto">Cryptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/robots">Robots</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav_items">
+                    <a href="https://ithubhub.com/project" class="nav_links" id="project">Project</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/personalities" class="nav_links">Personalities</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/minh">Minh </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Ideal Jobs</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Feedback</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
                 </li>
             </ul>
         </div>
     </nav>
-    <h1>What do the tests result mean for Minh?</h1>
+    <h1 style="font-size:30px;padding:20px;padding-top:150px;">What do the tests result mean for Minh?</h1>
     <br>
     <p> 
         The Myers-Briggs test shows my personality type, my traits, the role I would be suited for the most in a team and my strategy. From what I can see, I am highly introverted and one of my biggest flaws. Although being introverted is fine, the test shows that I am extremely introverted so this may bring up complications when acquainting myself with my teammates as well as when it comes to sharing our ideas. However, now that I know this weakness, I will be able to focus on bettering this side of me. The test also tells me I am a slightly intuitive person. Therefore, I can pay more attention to details in my team’s works and identify mistakes and flaws or even ways to improve certain aspects. I am always pondering, questioning and seeking answers. This trait can help me be a quick-learner as I am always eager to satisfy my curiosity by learning and studying. From the test, I gathered that I am constantly prospecting. Such a trait is beneficial as it helps me plan ahead by considering future outcomes of my decisions which can also be implemented in teamwork since I am able to consider the best and optimal outcomes for my group. Although this may cause me to seem indecisive, it is essential when it comes to risk managing. And finally, the last trait and my favorite is I am a turbulent person. I am always striving for perfection and to constantly improve myself. With this, I can always help my team improve their work.
@@ -44,16 +128,16 @@
         
     </p>
     <br>
-    <h1>How do you think these results may influence your behavior in a team?</h1>
+    <h1 style="font-size:30px;padding:20px;">How do you think these results may influence your behavior in a team?</h1>
     <br>
     <p>  
         The results from each test helps me understand more about myself and see my weaknesses as well as where I excel. I think it is a great guide for which parts of myself I should be focusing on the most to improve how I am currently.
 
     </p>
     <br>
-    <h1>How should you take this into account when forming a team?</h1>
+    <h1 style="font-size:30px;padding:20px;">How should you take this into account when forming a team?</h1>
     <br>
-    <p>
+    <p style="padding-bottom:200px;">
         I believe these results show that when in a team, I will most likely not be a team leader but rather someone who analyzes our team’s work and provides constructive criticisms throughout the working process. I will be paying very close attention to my teammates’ contributions and ideas, finding and picking ones that will benefit the entire group the most. When forming a team, I should seek out people with skills and traits that complement mine, especially a great leader figure but also averting having teammates whose traits overlap one another as that can lead to disagreements and drag the efficiency of the entire group down.
 
     </p>
