--- a/Personality-Quang-Le.html
+++ b/Personality-Quang-Le.html
@@ -5,46 +5,131 @@
     <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="personaility.css">
+    <link rel="stylesheet" href="Personality-style.css">
 </head>
 <body>
     <!-- navigation menu -->
+    <!-- navigation menu -->
     <nav class="navbar">
         <div class="nav_container">
-            <a href="" id="team_name">IT Hub</a>
+            <a href="https://ithubhub.com" id="team_name">IT Hub</a>
             <ul class="nav_menu">
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="home-page">Home</a>
+                    <a href="https://ithubhub.com" class="nav_links" id="home-page">Home</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#team" class="nav_links" id="personal_info">Team</a>
+                    <a href="https://ithubhub.com/#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="IT_Tech.html" class="nav_links"  id="it_tech">IT Tech</a>
+                    <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#project" class="nav_links" id="project">Project</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#Personalities" class="nav_links" id="personalities">Personalities</a>
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/it-tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/ai">AI </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/cloud-computing">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/crypto">Cryptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/robots">Robots</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav_items">
+                    <a href="https://ithubhub.com/project" class="nav_links" id="project">Project</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/personalities" class="nav_links">Personalities</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/minh">Minh </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Ideal Jobs</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Feedback</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
                 </li>
             </ul>
         </div>
     </nav>
-    <h1>What do the tests result mean for Quang?</h1>
+    <h1 style="font-size:30px;padding:20px;padding-top:150px;">What do the tests result mean for Quang?</h1>
     <p> 
         The results were very consistent to who I am as a person now. I’m an introvert at heart, I have a lot of negative thoughts and self-doubts. I’m very curious but I’m also very conflictive in my thinking, leaning towards being intuitive but also making decisions based more on critical thinking rather than emotions. And I’m very much a people pleaser more than an assertive person. 
     </p>
     <br>
-    <h1>How do you think these results may influence your behavior in a team?</h1>
+    <h1 style="font-size:30px;padding:20px;">How do you think these results may influence your behavior in a team?</h1>
     <br>
     <p>  
         I don’t like to work in a team, not only because of me being introvert, but also because I have a lot of negative thoughts towards my potential teammates, and I don’t trust people to uphold their weight in a group. Many times in my life, I had to be on the team because one or more teammates in my team refused to put in the work for the final goal. And I couldn’t hold them accountable for their laziness because they are the spawn of rich powerful parents or corrupted officials, giving them the power to get away with any crime they commit. I’m still very open in giving people a chance to show their intention, but I also easily lose trust in people when they fail to perform the first or second time.
     </p>
     <br>
-    <h1>How should you take this into account when forming a team?</h1>
+    <h1 style="font-size:30px;padding:20px;">How should you take this into account when forming a team?</h1>
     <br>
-    <p>
+    <p style="padding-bottom:200px;">
         It doesn’t matter much for me whether my teammates are extroverted or introverted. I’m an introvert but I’ve adapted to be extrovert and lead if necessary. Just like Dave Chappelle'sacceptance speech on his Mark Twain’s Award: ‘Sometimes you have to be a lion so you can be the lamb you really are”. I’ve realized from personal experiences that being only introverted will make you lose out on opportunities and greater accomplishments. That’s why, even if your nature is introverted, it’s necessary in life, sometimes, to be the extrovert that you need to be. So teammates' personalities weren’t my criteria, but I judge potential teammates on their work ethics. Whether they are on time, the quality they deliver, their attitude working in a team, etc. These are my teammates criteria, and because of this, when forming a team, I tend to choose people with good records or those who showed great performance the first time they worked with me.
     </p>
 </body>
