--- a/Personality-Hoang-Tran.html
+++ b/Personality-Hoang-Tran.html
@@ -5,48 +5,132 @@
     <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="personaility.css">
+    <link rel="stylesheet" href="Personality-style.css">
 </head>
 <body>
     <!-- navigation menu -->
     <nav class="navbar">
         <div class="nav_container">
-            <a href="" id="team_name">IT Hub</a>
+            <a href="https://ithubhub.com" id="team_name">IT Hub</a>
             <ul class="nav_menu">
                 <li class="nav_items">
-                    <a href="index.html" class="nav_links" id="home-page">Home</a>
+                    <a href="https://ithubhub.com" class="nav_links" id="home-page">Home</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#team" class="nav_links" id="personal_info">Team</a>
+                    <a href="https://ithubhub.com/#team" class="nav_links" id="personal_info">Team</a>
                 </li>
                 <li class="nav_items">
-                    <a href="IT_Tech.html" class="nav_links"  id="it_tech">IT Tech</a>
+                    <a href="https://ithubhub.com/tools" class="nav_links" id="tools">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#project" class="nav_links" id="project">Project</a>
+                    <a href="https://ithubhub.com/itwork" class="nav_links" id="itwork">Tools</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#Personalities" class="nav_links" id="personalities">Personalities</a>
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/it-tech" class="nav_links" id="it_tech" data-dropdown-link>IT Tech</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/ai">AI </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/cloud-computing">Cloud Computing</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/crypto">Cryptocurrencies</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/it-tech/robots">Robots</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav_items">
+                    <a href="https://ithubhub.com/project" class="nav_links" id="project">Project</a>
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/personalities" class="nav_links">Personalities</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/minh">Minh </a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/personalities/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Ideal Jobs</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/job/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
+                </li>
+                <li class="nav_items">
+                    <div class="dropdown" data-dropdown>
+                        <a href="https://ithubhub.com/job" class="nav_links">Feedback</a>
+                        <div class="dropdown-menu">
+                            <ul class="dropdown-content">
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/minh">Minh </a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/hoang">Hoang</a>
+                                </li>    
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/quang">Quang</a>
+                                </li>
+                                <li class="dropdown-item">
+                                    <a class="dropdown-links" href="https://ithubhub.com/feedback/thang">Thang</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>   
                 </li>
             </ul>
         </div>
     </nav>
-    <h1>What do the tests result mean for Hoang?</h1>
+    <h1 style="font-size:30px;padding:20px;padding-top:150px;">What do the tests result mean for Hoang?</h1>
             <p> 
                 Personally, I believe the findings are fairly similar to me, and it also provides me with some new viewpoints that I had never considered before. It also teaches me how to completely realize my genuine potential by providing data about the personality’s advantages and disadvantages. But I'm not sure whether it's entirely accurate since the questions were vague in certain cases. and I agree with the outcome in some ways but not fully. For example, it is said that receiving criticism would be difficult for this sort of personality because they may easily get into a fight, which I absolutely disagree with. Still, in conclusion, I feel that this discovery would enable me to have a better knowledge of myself. For example, my ego is fairly large, so it would take a long time for me to work on it, and altogether, this outcome will undoubtedly answer a lot of my concerns. The second graph accurately reflected me. It gave me a 65 percent openness and a 17 percent conscientiousness, which I absolutely agree with, particularly the conscientiousness since I only do things on the spur of the moment and not according to any plans. Apart from the other categories, my neuroticism is fairly high, around 81 percent, and as a result, I sometimes felt uninspired and fatigued on a regular basis. Extraversion scored 42 percent, which I believe is very high for me since I'm an introvert who seldom seeks out outside parties and such. Finally, the agreeableness is reported as 58 percent, which I believe is realistic given that I exclusively contact close friends. The most recent study examined my learning style, which is a blend of hearing, listening, touching, and doing. From my viewpoint, this is precisely how I study and learn new things. This observation is completely accurate for me, and as a result, I will begin to prioritize this learning method above the others. 
 
             </p>
             <br>
-            <h1>How do you think these results may influence your behavior in a team?</h1>
+            <h1 style="font-size:30px;padding:20px;">How do you think these results may influence your behavior in a team?</h1>
             <br>
             <p>  
                 The findings will undoubtedly have an impact on me in certain situations since I am 68 percent introverted, making it tough for me to interact with other peers when it comes to cooperation. As previously said, my ego is enormous, and as a consequence, my ambition is also impacted by it, but I am not a good planner, thus I am often unexpected, which is highly bothersome to other teammates who want to follow the rules. And most of the time, I see that when I lose or get a terrible mark, my competitiveness really kicks in. Moreover, since my neuroticism is rather strong, my negativity may have an effect on others. causing me to stress not just myself but also the teammates with whom I worked. So those are the things I have to be very cautious about while working in a group as this could hurt someone physically and mentally.
 
             </p>
             <br>
-            <h1>How should you take this into account when forming a team?</h1>
+            <h1 style="font-size:30px;padding:20px;">How should you take this into account when forming a team?</h1>
             <br>
-            <p>
+            <p style="padding-bottom:200px;">
                 I feel that I must choose people with a high extroverted personality so that we may have multiple points of view while addressing a subject. As a result, we may have a deeper knowledge of our partners, knowing why or how they saw it that way, and together, we can change both of our points of view into one, bringing a lot of our own signature and interest to the readers or instructors. I also want to find individuals who have similar personalities to mine since it is much simpler to have someone who will constantly support you when you speak your thoughts. I really value freedom so I would also need a person in a team who constantly reminds me of the work all the members have to do as I am easily distracted.
 
             </p>
